--- a/assets/main.css
+++ b/assets/main.css
@@ -7,9 +7,48 @@ body {
 	font-family: 'Open Sans', sans-serif;
 }
 
+.grid-item-content {
+	padding: 24px 12px;
+	transition: 0.5s;
+} 
+.grid-item-content:hover {
+	position: relative;
+	top: -5px;
+	left: -5px;
+}
+.img-container {
+	width: 100%;
+}
+.img-container>img {
+	width: 100%;
+}
+.img-container:hover {
+
+}
+
+.grid {
+	margin-top: 100px;
+	margin-bottom: 100px;
+}
+
+/* Pic page */
+.img-page img {
+	filter: drop-shadow(12px 12px 0px yellow);
+	margin-bottom: 40px;
+}
+h1 {
+    font-family: 'Passion One', cursive;
+}
+hr {
+	margin-bottom: 50px;
+}
+
+
 /*Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) { 
-
+	.grid-item-content {
+		padding: 12px 6px !important;
+	}
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -26,60 +65,5 @@ body {
 @media (min-width: 1200px) {
 
 }
-
-.grid-item {
-	margin-bottom: 40px;
-	background-color: yellow;
-	position: relative;
-	top: 12px;
-	left: 12px;
-	max-width: 100%;
-}
-.grid-item>a>img:hover {
-	position: relative;
-	top: -17px;
-	left: -17px;
-}
-.grid-item>a>img {
-	max-width: 100%;
-	position: relative;
-	top: -12px;
-	left: -12px;
-	transition-duration: 0.5s;
-}
-.grid-item--gigante {
-  	width: 640px;
-  	max-width: 100%;
-}
-
-.grid {
-	margin-top: 100px;
-	margin-bottom: 100px;
-  	padding-left: 40px;
-  	padding-right: 40px;
-}
-
-/* Pic page */
-.img-container {
-	padding-top: 100px;
-	padding-bottom: 100px;
-	max-width: 900px; 
-	margin-right: auto; 
-	margin-left: auto; 
-
-}
-.card>img {
-	max-width: 100%;
-	filter: drop-shadow(12px 12px 0px yellow);
-	margin-bottom: 40px;
-}
-h1 {
-    font-family: 'Passion One', cursive;
-}
-hr {
-	margin-bottom: 50px;
-}
-
-
 
 
