--- a/assets/main.css
+++ b/assets/main.css
@@ -36,6 +36,37 @@ hr {
 	margin-bottom: 50px;
 }
 
+
+/* Pagination color */
+.pagination > li > a
+{
+    background-color: white;
+    color: purple;
+}
+
+.pagination > li > a:focus,
+.pagination > li > a:hover,
+.pagination > li > span:focus,
+.pagination > li > span:hover
+{
+    color: purple;
+    background-color: #eee;
+    border-color: #ddd;
+}
+
+.pagination > .active > a
+{
+    color: white;
+    background-color: purple !important;
+    border: solid 1px purple !important;
+}
+
+.pagination > .active > a:hover
+{
+    background-color: purple;
+    border: solid 1px purple;
+}
+
 /* set for xs devices */
 .grid-item-content {
 	padding: 0px 0px 28px 0px;
